apps/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bentopdf
  template:
    metadata:
      labels:
        app: bentopdf
    spec:
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 128Mi
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
