apps/bentopdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bentopdf
  namespace: bentopdf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: bentopdf.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: bentopdf
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bentopdf.sanxer.dk
      secretName: bentopdf-tls
